--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
+    "@types/css-modules": "^1.0.5",
     "@types/eslint": "~8.56.2",
     "@types/eslint-config-prettier": "~6.11.3",
-    "@types/gif.js": "~0.2.5",
+    "@types/gif.js": "^0.2.5",
     "@types/lint-staged": "~13.3.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
