--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "build:wasm && build:js",
+    "build": "npm run build:wasm && npm run build:js",
     "build:js": "tsc && vite build",
     "build:wasm": "cd wasm && wasm-pack build --target web --out-dir ../public/wasm --release",
     "preview": "vite preview",
