--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/css-modules": "^1.0.5",
     "@types/eslint": "~8.56.2",
     "@types/eslint-config-prettier": "~6.11.3",
+    "@types/eslint-plugin-jsx-a11y": "~6.10.0",
     "@types/gif.js": "^0.2.5",
     "@types/lint-staged": "~13.3.0",
     "@types/react": "^18.2.55",
